--- a/ChronoDrive-UI/package.json
+++ b/ChronoDrive-UI/package.json
@@ -47,11 +47,13 @@
     "@angular/core": "8.2.8",
     "@angular/forms": "8.2.8",
     "@angular/language-service": "8.2.8",
+    "@angular-mdc/web": "^3.2.1",
     "@angular/platform-browser": "8.2.8",
     "@angular/platform-browser-dynamic": "8.2.8",
     "@angular/router": "8.2.8",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
+    "@types/electron": "^1.6.10",
     "@types/jasmine": "3.3.16",
     "@types/jasminewd2": "2.0.6",
     "@types/mocha": "5.2.7",
@@ -85,6 +87,10 @@
     "node": ">=10.9.0"
   },
   "dependencies": {
-    "@angular-mdc/web": "^3.2.1"
+    "@angular-mdc/web": "^3.2.1",
+    "@angular/animations": "^8.0.0 || ^9.0.0-0",
+    "@angular/cdk": "~8.2.3",
+    "@angular/forms": "^8.0.0 || ^9.0.0-0",
+    "@angular/material": "^8.2.3"
   }
 }
