--- a/ChronoDrive-UI/package.json
+++ b/ChronoDrive-UI/package.json
@@ -53,6 +53,7 @@
     "@angular/router": "8.2.8",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
+    "@types/angular-material": "^1.1.69",
     "@types/electron": "^1.6.10",
     "@types/jasmine": "3.3.16",
     "@types/jasminewd2": "2.0.6",
@@ -90,7 +91,10 @@
     "@angular-mdc/web": "^3.2.1",
     "@angular/animations": "^8.0.0 || ^9.0.0-0",
     "@angular/cdk": "~8.2.3",
+    "@angular/flex-layout": "8.0.0-beta.27",
     "@angular/forms": "^8.0.0 || ^9.0.0-0",
-    "@angular/material": "^8.2.3"
+    "@angular/material": "^8.2.3",
+    "rxjs": "6.5.3",
+    "uuid": "3.2.1"
   }
 }
