Update UI on user dir upates

--- a/ChronoDrive-UI/package.json
+++ b/ChronoDrive-UI/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "angular-electron",
+  "name": "chrono-drive",
   "version": "6.2.0",
-  "description": "Angular 8 with Electron (Typescript + SASS + Hot Reload)",
-  "homepage": "https://github.com/maximegris/angular-electron",
+  "description": "NDN-based file synchronization application",
+  "homepage": "https://github.com/SethRedwine/ChronoDrive",
   "author": {
-    "name": "Maxime GRIS",
-    "email": "maxime.gris@gmail.com"
+    "name": "Seth Redwine",
+    "email": "sredwine@unomaha.edu"
   },
   "keywords": [
     "angular",
     "angular 8",
     "electron",
     "typescript",
-    "sass"
+    "sass",
+    "ndn",
+    "chronosync"
   ],
   "main": "main.js",
   "private": true,
@@ -94,6 +96,7 @@
     "@angular/flex-layout": "8.0.0-beta.27",
     "@angular/forms": "^8.0.0 || ^9.0.0-0",
     "@angular/material": "^8.2.3",
+    "node-watch": "^0.6.3",
     "rxjs": "6.5.3",
     "uuid": "3.2.1"
   }
