--- a/ChronoDrive-UI/package.json
+++ b/ChronoDrive-UI/package.json
@@ -96,6 +96,7 @@
     "@angular/flex-layout": "8.0.0-beta.27",
     "@angular/forms": "^8.0.0 || ^9.0.0-0",
     "@angular/material": "^8.2.3",
+    "ndn-js": "^0.19.0",
     "node-watch": "^0.6.3",
     "rxjs": "6.5.3",
     "uuid": "3.2.1"
