--- a/ChronoDrive-UI/package.json
+++ b/ChronoDrive-UI/package.json
@@ -35,7 +35,8 @@
     "electron:linux": "npm run build:prod && electron-builder build --linux",
     "electron:windows": "npm run build:prod && electron-builder build --windows",
     "electron:mac": "npm run build:prod && electron-builder build --mac",
-    "electron:arm": "npm run build:prod && electron-builder build --armv7l",
+    "electron:arm7": "npm run build:prod && electron-builder build --armv7l",
+    "electron:arm6": "npm run build:prod && electron-builder build --arm64",
     "test": "npm run postinstall:web && ng test",
     "e2e": "npm run build:prod && mocha --timeout 300000 --require ts-node/register e2e/**/*.spec.ts",
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
