--- a/ChronoDrive-UI/package.json
+++ b/ChronoDrive-UI/package.json
@@ -100,6 +100,7 @@
     "@angular/material": "^8.2.3",
     "ndn-js": "^0.19.0",
     "node-watch": "^0.6.3",
+    "protobufjs": "^6.8.8",
     "rxjs": "6.5.3",
     "uuid": "3.2.1"
   }
