--- a/ChronoDrive-UI/package.json
+++ b/ChronoDrive-UI/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.803.6",
+    "@angular-mdc/web": "^3.2.1",
     "@angular/cli": "8.3.6",
     "@angular/common": "8.2.8",
     "@angular/compiler": "8.2.8",
@@ -51,7 +52,6 @@
     "@angular/core": "8.2.8",
     "@angular/forms": "8.2.8",
     "@angular/language-service": "8.2.8",
-    "@angular-mdc/web": "^3.2.1",
     "@angular/platform-browser": "8.2.8",
     "@angular/platform-browser-dynamic": "8.2.8",
     "@angular/router": "8.2.8",
@@ -62,7 +62,7 @@
     "@types/jasmine": "3.3.16",
     "@types/jasminewd2": "2.0.6",
     "@types/mocha": "5.2.7",
-    "@types/node": "12.6.8",
+    "@types/node": "^12.12.14",
     "chai": "4.2.0",
     "codelyzer": "5.1.0",
     "conventional-changelog-cli": "2.0.21",
@@ -98,6 +98,8 @@
     "@angular/flex-layout": "8.0.0-beta.27",
     "@angular/forms": "^8.0.0 || ^9.0.0-0",
     "@angular/material": "^8.2.3",
+    "cross-blob": "^1.1.0",
+    "folder-hash": "^3.3.0",
     "ndn-js": "^0.19.0",
     "node-watch": "^0.6.3",
     "protobufjs": "^6.8.8",
