--- a/ChronoDrive-UI/package.json
+++ b/ChronoDrive-UI/package.json
@@ -98,11 +98,12 @@
     "@angular/flex-layout": "8.0.0-beta.27",
     "@angular/forms": "^8.0.0 || ^9.0.0-0",
     "@angular/material": "^8.2.3",
+    "bytebuffer": "^5.0.1",
     "cross-blob": "^1.1.0",
     "folder-hash": "^3.3.0",
     "ndn-js": "^0.19.0",
     "node-watch": "^0.6.3",
-    "protobufjs": "^6.8.8",
+    "protobufjs": "^5.0.3",
     "rxjs": "6.5.3",
     "uuid": "3.2.1"
   }
